# flowtrace

./: .gitignore
backend/app/: alembic.ini  main.py  pyproject.toml
backend/app/api/: runs.py  stream.py  workflows.py
backend/app/core/: config.py  pricing.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 1eb00cbf20f0_initial_schema.py  74f7dd419dfb_initial_schema.py
backend/app/executor/: compiler.py  providers.py  runner.py  tracing.py
backend/app/models/: __init__.py  provider_bindings.py  run_steps.py  trace_events.py  workflow_runs.py  workflows.py
backend/app/schemas/: workflow_schema.py
backend/worker/: worker.py
docs/: project-doc.md
